# familia

./: .gitignore  Cargo.toml  README.md  basic.fm  build.rs  familia.sh  gc.cpp  golden_test.py  grammar.lark  llvm_test.c  llvm_test.cpp  llvm_test.ll  llvm_test.py  models.fm  notes.md  parametric.fm  parametric2.fm  rts.cpp  setup.sh  setup_rts.sh  v1.py
codegen/: .gitignore  Cargo.toml  build.rs
codegen/src/: lib.rs  main.rs  rts.cpp  rts.rs  utils.rs
examples/: basic.fm  models.fm  parametric.fm  parametric2.fm
familia/: Cargo.toml
familia/src/: main.rs
frontend/: Cargo.toml
frontend/src/: ast_to_ir.rs  error.rs  familia.lalrpop  familia2.lalrpop  ir.rs  lexer.rs  lib.rs  parser.rs  parser2.rs  prelude.rs  printer.rs  query.rs
frontend/src/ast/: ast.rs  lexer.rs  mod.rs  ptr.rs
frontend/src/ast2/: mod.rs
frontend/src/context/: mod.rs  registry.rs
frontend/src/ir/: ir.rs  ir_kinds.rs  mod.rs  printer.rs  registry.rs
frontend/src/snapshots/: familia_frontend__parser2__test_parse__lex1.snap  familia_frontend__parser2__test_parse__parse_expr.snap  familia_frontend__parser2__test_parse__parse_getattr.snap  familia_frontend__parser2__test_parse__parse_getattr_fail.snap  familia_frontend__parser2__test_parse__parse_type.snap
frontend/src/transforms/: ast_to_ir.rs  mod.rs  query.rs  utils.rs
llvm_samples/: call_by_val.ll  call_by_val_O1.ll  call_fn_ptr.c  call_fn_ptr.ll  codegen_test3.ll  codegen_test3_O1.ll  static_str.c  static_str.ll  store_str.ll  struct.c  struct.ll  struct_O1.ll  test1.ll  test1_O1.ll  test2.ll  test2_O1.ll
notes/: cc_syntax_error.cc  cc_syntax_error.txt  cc_type_error.cc  cc_type_error.txt  notes.md  rust_lib.rs  rust_multi_file_error.rs  rust_multi_file_error.txt  rust_syntax_error.rs  rust_syntax_error.txt  rust_type_error.rs  rust_type_error.txt
src/: familia.lalrpop  lib.rs  main.rs  parser.rs
src/ast/: mod.rs  ptr.rs
tests/: basic_classv1.fm  basic_classv1.ir  basic_classv1.ll  basic_classv1_O1.ll  basic_classv2.fm  basic_classv2.ir  basic_classv2.ll  basic_classv2_O1.ll  basic_v1.fm  basic_v1.ir  basic_v1.ll  basic_v1_O1.ll  basic_v2.fm  basic_v2.ir  basic_v2.ll
tests/basic/: basic_classv1.ir  basic_classv2.fm  basic_classv2.ir  basic_classv2.ll  basic_classv2_O1.ll  basic_v2_O1.ll
tests/parametric/: model.fm
