[package]
name = "familia"
version = "0.1.0"
authors = ["Allan Lin <a8lin@uwaterloo.ca>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }
