[package]
name = "familia_frontend"
version = "0.1.0"
authors = ["Allan Lin <a8lin@uwaterloo.ca>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
anyhow = "1.0.86"
itertools = "0.13.0"
either = "1.12.0"
im = "15.1.0"
lazy_static = "1.5.0"
colored = "2.1.0"
log = "0.4.22"
derive-new = "0.6.0"
ariadne = "0.4.1"
chumsky = { git = "https://github.com/zesterer/chumsky", features = ["label"] }

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
